--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2555,8 +2555,8 @@ pre code {
   color: #495057;
   background-color: #fff;
   background-clip: padding-box;
-  border: 1px solid red;
-  /* border: 1px solid #f0f1f5; */
+  /* border: 1px solid red; */
+  border: 1px solid #f0f1f5;
   border-radius: 0.75rem;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
