--- a/src/jsx/pages/NewPage.css
+++ b/src/jsx/pages/NewPage.css
@@ -10,3 +10,8 @@
   overflow-y: scroll;
   border: 0.5px solid #bbbbbb;
 }
+
+/* .slug-input {
+  width: 80% !important;
+  border: 1px solid red !important;
+} */
