added upload image functionality to team member page

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -22,3 +22,11 @@
   margin-bottom: 30px;
   padding-bottom: 0;
 }
+
+.single-image-uploader {
+}
+
+.single-image-uploader__image {
+  max-width: 300px;
+  max-height: 400px;
+}
